--- a/setup-database.html
+++ b/setup-database.html
@@ -147,7 +147,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="../config.js"></script>
+    <script src="config.js"></script>
     <script>
         // تهيئة Supabase
         const supabaseUrl = CONFIG.SUPABASE.URL;
