--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -350,7 +350,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="config.js"></script>
-    <script src="../utils.js"></script>
+    <script src="utils.js"></script>
     <script src="notifications-system.js"></script>
     <script src="settings-page.js"></script>
     <script src="users-management.js"></script>
