--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="config.js"></script>
-    <script src="../utils.js"></script>
+    <script src="utils.js"></script>
     <script>
         // تهيئة Supabase
         const supabaseUrl = CONFIG?.SUPABASE?.URL || 'https://vpvvjascwgivdjyyhzwp.supabase.co';
