--- a/school-dashboard.html
+++ b/school-dashboard.html
@@ -343,7 +343,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="config.js"></script>
-    <script src="../utils.js"></script>
+    <script src="utils.js"></script>
     <script src="students-management.js"></script>
     <script src="installments-management.js"></script>
     <script src="messages-system.js"></script>
