Remove remaining Arabic comments from index.html and config.example.js

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             });
             
             if (response.error) {
-                // Fallback: مقارنة مباشرة (للتطوير فقط)
+                // Fallback: direct comparison (for development only)
                 return password === hash;
             }
             
