Add payment receipt printing feature with same design and colors as reference system

--- a/school-dashboard.html
+++ b/school-dashboard.html
@@ -346,6 +346,7 @@
     <script src="utils.js?v=20250127"></script>
     <script src="students-management.js"></script>
     <script src="installments-management.js"></script>
+    <script src="receipt-printer.js"></script>
     <script src="messages-system.js"></script>
     <script src="notifications-system.js"></script>
     <script src="settings-page.js"></script>
