--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -351,6 +351,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="config.js"></script>
     <script src="utils.js?v=20250127"></script>
+    <script src="receipt-printer.js"></script>
     <script src="notifications-system.js"></script>
     <script src="settings-page.js"></script>
     <script src="users-management.js"></script>
