--- a/404.html
+++ b/404.html
@@ -10,17 +10,32 @@
             font-family: 'Cairo', sans-serif;
         }
         body {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #048267 0%, #14b8a6 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             margin: 0;
+            position: relative;
+        }
+        body::before {
+            content: '';
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: radial-gradient(circle at 20% 50%, rgba(255, 255, 255, 0.1) 0%, transparent 50%),
+                        radial-gradient(circle at 80% 80%, rgba(255, 255, 255, 0.1) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: 0;
         }
         .error-container {
             text-align: center;
             color: white;
             padding: 2rem;
+            position: relative;
+            z-index: 1;
         }
         h1 {
             font-size: 6rem;
@@ -44,7 +59,7 @@
         }
         a:hover {
             background: white;
-            color: #667eea;
+            color: #0f766e;
         }
     </style>
 </head>
