--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -12,59 +12,116 @@
             font-family: 'Cairo', sans-serif;
         }
         :root {
-            --primary-color: #667eea;
-            --secondary-color: #764ba2;
+            --primary-color: #0f766e;
+            --secondary-color: #14b8a6;
             --success-color: #10b981;
             --danger-color: #ef4444;
             --warning-color: #f59e0b;
             --info-color: #3b82f6;
         }
         body {
-            background-color: #f5f7fa;
+            background: linear-gradient(135deg, #048267 0%, #14b8a6 100%);
+            min-height: 100vh;
+            position: relative;
+        }
+        body::before {
+            content: '';
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: radial-gradient(circle at 20% 50%, rgba(255, 255, 255, 0.1) 0%, transparent 50%),
+                        radial-gradient(circle at 80% 80%, rgba(255, 255, 255, 0.1) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: 0;
         }
         .navbar {
-            background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+            background: linear-gradient(135deg, #0f766e 0%, #14b8a6 100%);
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            position: relative;
+            z-index: 1;
         }
         .sidebar {
-            background: white;
+            background: linear-gradient(180deg, #ffffff 0%, #f8f9fa 100%);
+            border-left: 4px solid #0f766e;
             min-height: calc(100vh - 56px);
-            box-shadow: 2px 0 10px rgba(0,0,0,0.05);
+            box-shadow: 3px 0 20px rgba(0, 0, 0, 0.08);
             position: sticky;
             top: 56px;
         }
         .sidebar-item {
-            padding: 15px 20px;
-            border-bottom: 1px solid #f0f0f0;
+            padding: 14px 16px;
+            border-bottom: 1px solid #e5e7eb;
             cursor: pointer;
             transition: all 0.3s;
-            color: #333;
+            color: #2d3748;
             text-decoration: none;
-            display: block;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            border-radius: 12px;
+            margin: 4px 8px;
+            background: #f8f9fa;
+            border: 2px solid transparent;
+            font-weight: 600;
         }
-        .sidebar-item:hover, .sidebar-item.active {
-            background: linear-gradient(90deg, rgba(102, 126, 234, 0.1) 0%, transparent 100%);
-            color: var(--primary-color);
-            border-right: 3px solid var(--primary-color);
+        .sidebar-item:hover {
+            background: linear-gradient(135deg, #f0fdf4 0%, #ffffff 100%);
+            border-color: #14b8a6;
+            color: #0f766e;
+            transform: translateX(-5px);
+        }
+        .sidebar-item.active {
+            background: linear-gradient(135deg, rgba(15, 118, 110, 0.15) 0%, rgba(20, 184, 166, 0.1) 100%);
+            border-color: #0f766e;
+            color: #0f766e;
+            font-weight: 700;
+            box-shadow: 0 4px 12px rgba(15, 118, 110, 0.2);
         }
         .sidebar-item i {
-            width: 25px;
-            margin-left: 10px;
+            width: 28px;
+            height: 28px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: linear-gradient(135deg, rgba(15, 118, 110, 0.1) 0%, rgba(20, 184, 166, 0.05) 100%);
+            border-radius: 8px;
+            font-size: 1.2rem;
+        }
+        .sidebar-item.active i {
+            background: linear-gradient(135deg, #0f766e 0%, #14b8a6 100%);
+            color: white;
         }
         .main-content {
             padding: 30px;
+            background: white;
+            min-height: calc(100vh - 56px);
+            position: relative;
+            z-index: 1;
         }
         .stat-card {
-            background: white;
+            background: linear-gradient(to bottom, #ffffff 0%, #f8f9ff 100%);
             border-radius: 15px;
             padding: 25px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            box-shadow: 0 5px 25px rgba(0, 0, 0, 0.12);
             margin-bottom: 20px;
             transition: transform 0.3s;
+            border-top: 3px solid transparent;
+            position: relative;
+        }
+        .stat-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, #0f766e, #14b8a6);
         }
         .stat-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+            box-shadow: 0 8px 30px rgba(0,0,0,0.15);
         }
         .stat-card .icon {
             width: 60px;
@@ -76,16 +133,18 @@
             font-size: 24px;
             color: white;
             margin-bottom: 15px;
+            background: linear-gradient(135deg, #0f766e 0%, #14b8a6 100%);
         }
         .stat-card .value {
             font-size: 32px;
             font-weight: 700;
-            color: #333;
+            color: #1f2937;
             margin: 10px 0;
         }
         .stat-card .label {
-            color: #666;
+            color: #6b7280;
             font-size: 14px;
+            font-weight: 600;
         }
         .content-section {
             display: none;
@@ -94,17 +153,28 @@
             display: block;
         }
         .school-card {
-            background: white;
+            background: linear-gradient(to bottom, #ffffff 0%, #f8f9ff 100%);
             border-radius: 15px;
             padding: 20px;
             margin-bottom: 20px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            box-shadow: 0 5px 25px rgba(0, 0, 0, 0.12);
             cursor: pointer;
             transition: all 0.3s;
+            border-top: 3px solid transparent;
+            position: relative;
+        }
+        .school-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, #0f766e, #14b8a6);
         }
         .school-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+            box-shadow: 0 8px 30px rgba(0,0,0,0.15);
         }
         .chat-container {
             height: 600px;
@@ -113,6 +183,7 @@
             background: white;
             border-radius: 15px;
             overflow: hidden;
+            box-shadow: 0 5px 25px rgba(0, 0, 0, 0.12);
         }
         .chat-messages {
             flex: 1;
@@ -136,13 +207,40 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         .message.sent .message-content {
-            background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+            background: linear-gradient(135deg, #0f766e 0%, #14b8a6 100%);
             color: white;
         }
         .message-input {
             border-top: 1px solid #e0e0e0;
             padding: 15px;
             background: white;
+        }
+        .btn-primary {
+            background: linear-gradient(135deg, #0f766e 0%, #14b8a6 100%);
+            border: none;
+            color: white;
+            font-weight: 600;
+        }
+        .btn-primary:hover {
+            background: linear-gradient(135deg, #0d6359 0%, #0f9d8e 100%);
+            box-shadow: 0 5px 20px rgba(15, 118, 110, 0.3);
+        }
+        .table {
+            background: white;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+        }
+        .table thead {
+            background: linear-gradient(135deg, #0f766e 0%, #14b8a6 100%);
+            color: white;
+        }
+        .table thead th {
+            font-weight: 700;
+            padding: 12px;
+        }
+        .table tbody tr:hover {
+            background: linear-gradient(to right, #f8f9ff 0%, #ffffff 100%);
         }
         .notification-badge {
             position: absolute;
