--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@
             font-family: 'Cairo', sans-serif;
         }
         body {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #048267 0%, #14b8a6 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
+            position: relative;
+        }
+        body::before {
+            content: '';
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: radial-gradient(circle at 20% 50%, rgba(255, 255, 255, 0.1) 0%, transparent 50%),
+                        radial-gradient(circle at 80% 80%, rgba(255, 255, 255, 0.1) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: 0;
         }
         .login-container {
             background: white;
@@ -25,12 +38,29 @@
             overflow: hidden;
             max-width: 450px;
             width: 100%;
+            position: relative;
+            z-index: 1;
         }
         .login-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #0f766e 0%, #14b8a6 100%);
             color: white;
             padding: 30px;
             text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+        .login-header::before {
+            content: '';
+            position: absolute;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, transparent 70%);
+            top: -50%;
+            right: -50%;
+        }
+        .login-header h1, .login-header p {
+            position: relative;
+            z-index: 1;
         }
         .login-header h1 {
             margin: 0;
@@ -56,11 +86,11 @@
             transition: all 0.3s;
         }
         .form-control:focus {
-            border-color: #667eea;
-            box-shadow: 0 0 0 0.2rem rgba(102, 126, 234, 0.25);
+            border-color: #0f766e;
+            box-shadow: 0 0 0 0.2rem rgba(15, 118, 110, 0.25);
         }
         .btn-login {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #0f766e 0%, #14b8a6 100%);
             border: none;
             border-radius: 10px;
             padding: 12px;
@@ -72,7 +102,8 @@
         }
         .btn-login:hover {
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 5px 15px rgba(15, 118, 110, 0.4);
+            background: linear-gradient(135deg, #0d6359 0%, #0f9d8e 100%);
         }
         .alert {
             border-radius: 10px;
