--- a/setup-database.html
+++ b/setup-database.html
@@ -12,9 +12,22 @@
             font-family: 'Cairo', sans-serif;
         }
         body {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #048267 0%, #14b8a6 100%);
             min-height: 100vh;
             padding: 20px;
+            position: relative;
+        }
+        body::before {
+            content: '';
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: radial-gradient(circle at 20% 50%, rgba(255, 255, 255, 0.1) 0%, transparent 50%),
+                        radial-gradient(circle at 80% 80%, rgba(255, 255, 255, 0.1) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: 0;
         }
         .container {
             max-width: 900px;
@@ -22,6 +35,8 @@
             border-radius: 20px;
             padding: 30px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            position: relative;
+            z-index: 1;
         }
         .step-card {
             border: 2px solid #e0e0e0;
@@ -31,8 +46,8 @@
             transition: all 0.3s;
         }
         .step-card:hover {
-            border-color: #667eea;
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.2);
+            border-color: #0f766e;
+            box-shadow: 0 5px 15px rgba(15, 118, 110, 0.2);
         }
         .step-card.completed {
             border-color: #10b981;
@@ -43,10 +58,18 @@
             background: #fef2f2;
         }
         .btn-primary {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #0f766e 0%, #14b8a6 100%);
             border: none;
             border-radius: 10px;
             padding: 12px 30px;
+            color: white;
+            font-weight: 600;
+            transition: all 0.3s;
+        }
+        .btn-primary:hover {
+            background: linear-gradient(135deg, #0d6359 0%, #0f9d8e 100%);
+            box-shadow: 0 5px 20px rgba(15, 118, 110, 0.3);
+            transform: translateY(-2px);
         }
         .log-container {
             background: #1e1e1e;
