--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
         * {
             font-family: 'Cairo', sans-serif;
@@ -450,6 +451,8 @@
     <script src="config.js"></script>
     <script src="utils.js?v=20250127"></script>
     <script src="receipt-printer.js"></script>
+    <script src="reports-system.js"></script>
+    <script src="whatsapp-system.js"></script>
     <script src="notifications-system.js"></script>
     <script src="settings-page.js"></script>
     <script src="users-management.js"></script>
