--- a/school-dashboard.html
+++ b/school-dashboard.html
@@ -437,11 +437,14 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="config.js"></script>
     <script src="utils.js?v=20250127"></script>
     <script src="students-management.js"></script>
     <script src="installments-management.js"></script>
     <script src="receipt-printer.js"></script>
+    <script src="reports-system.js"></script>
+    <script src="whatsapp-system.js"></script>
     <script src="messages-system.js"></script>
     <script src="notifications-system.js"></script>
     <script src="settings-page.js"></script>
