إضافة نظام المحادثات الشامل وإرسال التنبيهات المميزة - دعم المحادثة بين المدارس ورئيس مجلس الإدارة - إضافة واجهة إرسال التنبيهات من رئيس مجلس الإدارة - عرض التنبيهات المميزة في أعلى الشاشة للمدارس

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -349,9 +349,14 @@
                     </div>
 
                     <div id="messages" class="content-section">
+                        <div class="d-flex justify-content-between align-items-center mb-3">
+                            <h4>المحادثات</h4>
+                            <button class="btn btn-primary" onclick="showNewConversationModalAdmin()">
+                                <i class="bi bi-plus-circle"></i> محادثة جديدة
+                            </button>
+                        </div>
                         <div class="row">
                             <div class="col-md-4">
-                                <h4>المحادثات</h4>
                                 <div id="conversationsList" style="max-height: 600px; overflow-y: auto;">
 
                                 </div>
